--- a/elrond.conf
+++ b/elrond.conf
@@ -28,7 +28,7 @@
       on: elrond.leaderblocks
     calc: $leaderproposed - $leaderaccepted
    every: 1m
-    warn: $this > 0
+    warn: $this > 1
     crit: $this > 10
     info: Elrond node-0 leader blocks proposed/accepted hitrate is dropping
       to: sysadmin
@@ -38,17 +38,17 @@
       on: elrond.validatorblocks
     calc: $signedblocks - $signedaccepted
    every: 1m
-    warn: $this > 2
-    crit: $this > 20
+    warn: $this > 20
+    crit: $this > 250
     info: Elrond node-0 validator blocks signed/accepted hitrate is dropping
       to: sysadmin
 
  # Elrond node peers dropping
-   alarm: elrond_connected_pvn
-      on: elrond.connected_pvn
+   alarm: elrond_peers
+      on: elrond.peers
     calc: $peers
    every: 1m
-    warn: $this < 40
+    warn: $this < 35
     crit: $this < 30
     info: Elrond node-0 peers are dropping
       to: sysadmin
