--- a/elrond.conf
+++ b/elrond.conf
@@ -7,8 +7,8 @@
     calc: $current - $synced
    every: 1m
   repeat: on warning 600 critical 60
-    warn: $this > (($status >= $WARNING ) ? ( 02 ) : ( 05 ))
-    crit: $this > (($status == $CRITICAL) ? ( 100 ) : ( 200 ))
+    warn: $this > (($status >= $WARNING ) ? ( 2 ) : ( 20 ))
+    crit: $this > (($status == $CRITICAL) ? ( 20 ) : ( 200 ))
     info: Elrond node-0 is out of syncronization
       to: sysadmin
 
@@ -28,8 +28,8 @@
       on: elrond.leaderblocks
     calc: $leaderproposed - $leaderaccepted
    every: 1m
-    warn: $this > 1
-    crit: $this > 10
+    warn: $this > (($status >= $WARNING ) ? ( 01 ) : ( 02 ))
+    crit: $this > (($status == $CRITICAL ) ? ( 02 ) : ( 05 ))
     info: Elrond node-0 leader blocks proposed/accepted hitrate is dropping
       to: sysadmin
 
@@ -38,8 +38,8 @@
       on: elrond.validatorblocks
     calc: $signedblocks - $signedaccepted
    every: 1m
-    warn: $this > 20
-    crit: $this > 250
+    warn: $this > (($status >= $WARNING ) ? ( 10 ) : ( 20 ))
+    crit: $this > (($status == $CRITICAL ) ? ( 20 ) : ( 250 ))
     info: Elrond node-0 validator blocks signed/accepted hitrate is dropping
       to: sysadmin
 
@@ -48,7 +48,7 @@
       on: elrond.peers
     calc: $peers
    every: 1m
-    warn: $this < 35
-    crit: $this < 30
+	warn: $this < (($status =< $WARNING ) ? ( 35 ) : ( 30 ))
+    crit: $this < (($status == $CRITICAL ) ? ( 30 ) : ( 20 ))
     info: Elrond node-0 peers are dropping
       to: sysadmin
