--- a/elrond.conf
+++ b/elrond.conf
@@ -48,7 +48,7 @@
       on: elrond.peers
     calc: $peers
    every: 1m
-    warn: $this < (($status =< $WARNING ) ? ( 35 ) : ( 30 ))
-    crit: $this < (($status == $CRITICAL ) ? ( 30 ) : ( 20 ))
+    warn: $this < (($status >= $WARNING ) ? ( 45 ) : ( 40 ))
+    crit: $this < (($status == $CRITICAL ) ? ( 40 ) : ( 30 ))
     info: Elrond node-0 peers are dropping
       to: sysadmin
